--- a/datawrapper/20150212-umdhockey/index.html
+++ b/datawrapper/20150212-umdhockey/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <title>How UMD's women's hockey program costs compare to other programs</title>
-    <meta name="description" content="Some Minneapolis landlords rack up housing violations. Does yours?">
+    <meta name="description" content="How UMD's women's hockey program costs compare to other programs">
     <meta name="author" content="CJ Sinner - StarTribune">
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
