--- a/datawrapper/20150224-graduation/index.html
+++ b/datawrapper/20150224-graduation/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <title>Look up your Minnesota high school's 2014 graduation rate</title>
-    <meta name="description" content="Some Minneapolis landlords rack up housing violations. Does yours?">
+    <meta name="description" content="Look up your Minnesota high school's 2014 graduation rate">
     <meta name="author" content="CJ Sinner - StarTribune">
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
