--- a/datawrapper/20150112-pcard/index.html
+++ b/datawrapper/20150112-pcard/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <title>P-card spending details among Minneapolis public school employees</title>
-    <meta name="description" content="Some Minneapolis landlords rack up housing violations. Does yours?">
+    <meta name="description" content="P-card spending details among Minneapolis public school employees">
     <meta name="author" content="CJ Sinner - StarTribune">
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
