--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -436,4 +436,6 @@ spitFirstItems(1975);
 
       });
 </script>
+<script src="http://static.startribune.com/js/pym/pym.min.js"></script>
+<script>var pymChild = new pym.Child();</script>
 </html>
