2px padding on the body, for drop shadows.

--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -15,6 +15,7 @@
       color:#444;
       -webkit-font-smoothing:antialiased;
       text-rendering:optimizeLegibility:;
+      padding:2px;
     }
     ::selection {
       background: #e1c0e1;
