--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Prince's Career by the Numbers</title>
   <meta name="description" content="Prince's Career by the Numbers">
-  <meta name="author" content="Frey Hargarten - StarTribune">
+  <meta name="author" content="Frey Hargarten, Billy Steve Clayton, Jamie Hutt - StarTribune">
 <!--   <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css"> -->
   <link rel="stylesheet" href="http://striblab.github.io/startribune_dataviz/_common_resources/styles/startribune_dataviz_styles.css" />
   <style>
@@ -16,8 +16,9 @@
       -webkit-font-smoothing:antialiased;
       text-rendering:optimizeLegibility:;
       padding:2px;
-      height:3000px;
+      width:516px;
     }
+
     ::selection {
       background: #e1c0e1;
     }
@@ -25,7 +26,7 @@
       background: #e1c0e1;
     }
     #wrapper{
-      max-width:525px;
+
     }
     #filterBox{
       display:none;
@@ -33,11 +34,24 @@
 
     .filters{
       width:100%;
-      background:#fff;
+      z-index:10000;
+      position:fixed;
+      top:0;
+      background:/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+82,ffffff+100&1+84,0+100 */
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 82%, rgba(255,255,255,1) 84%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 82%,rgba(255,255,255,1) 84%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(255,255,255,1) 82%,rgba(255,255,255,1) 84%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+;
+padding-bottom:36px;
+      width: 502px;
+    left: 2px;
     }
     #filter{
       margin-top:-9px;
     }
+
+    .content{margin-top:135px;}
 
     #filter input[type=search]{
       width: 100% !important;
@@ -153,7 +167,7 @@
       width:100%;
       background-color:#fff;
       border:solid #ddd;
-      border-width:0 0 1px 0;
+      border-width:0 0 1px 1px;
       float:left;
     }
     .button:hover, .selected {
@@ -263,9 +277,13 @@
     }
     @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
 
+      body {width:98.5%;}
+      
       #wrapper{
         width:100%;
       }
+
+
       .filters{
         width:100%;
         background:#fff;
@@ -298,77 +316,71 @@
 
 <body>
   <div id="wrapper">
+    <div class="filters">
+      <div id="selector">
+        <section class="main">
+          <div class="wrapper-demo">
+            <div id="dd" class="wrapper-dropdown-1" tabindex="1">
+              <span>Prince Rogers Nelson (1958-2016)</span>
+              <ul class="dropdown months" tabindex="1">
+                <li class="switch button" data="all"><a href="#">All</a></li>
+                <li class="switch button" data="album"><a href="#">Albums (51)</a></li>
+                <li class="switch button" data="grammy"><a href="#">Grammy Awards (7)</a></li>
+                <li class="switch button" data="tour"><a href="#">Tours (25)</a></li>
+                <li class="switch button" data="billboard"><a href="#">Billboard Rankings (40)</a></li>
+                <li class="switch button" data="tickets"><a href="#">Ticket Sales ($166m+)</a></li>
+                <li class="switch button" data="other"><a href="#">Other Events</a></li>
+              </ul>
+            </div>
+    ​       </div>
+        </section>
+      </div>
+      <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword or year"></input></div>
+    </div>
 
-<div class="filters">
- <div id="selector">
-  <section class="main">
-        <div class="wrapper-demo">
-          <div id="dd" class="wrapper-dropdown-1" tabindex="1">
-            <span>Prince Rogers Nelson (1958-2016)</span>
-            <ul class="dropdown months" tabindex="1">
-              <li class="switch button" data="all"><a href="#">All</a></li>
-              <li class="switch button" data="album"><a href="#">Albums (51)</a></li>
-              <li class="switch button" data="grammy"><a href="#">Grammy Awards (7)</a></li>
-              <li class="switch button" data="tour"><a href="#">Tours (25)</a></li>
-              <li class="switch button" data="billboard"><a href="#">Billboard Rankings (40)</a></li>
-              <li class="switch button" data="tickets"><a href="#">Ticket Sales ($166m+)</a></li>
-              <li class="switch button" data="other"><a href="#">Other Events</a></li>
-          </ul>
-          </div>
-        ​</div>
-</section>
-</div>
-
-<div class="filterBreak"></div>
-  <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword or year"></input></div>
-</div>
-
-<div class="content">
-<div class="results" style="display:none;"></div>
-
-<!-- <div id="timeline"> -->
-<div id="y1958" class="year"></div>
-<div id="y1975" class="year"></div>
-<div id="y1978" class="year"></div>
-<div id="y1979" class="year"></div>
-<div id="y1980" class="year"></div>
-<div id="y1981" class="year"></div>
-<div id="y1982" class="year"></div>
-<div id="y1983" class="year"></div>
-<div id="y1984" class="year"></div>
-<div id="y1985" class="year"></div>
-<div id="y1986" class="year"></div>
-<div id="y1987" class="year"></div>
-<div id="y1988" class="year"></div>
-<div id="y1990" class="year"></div>
-<div id="y1991" class="year"></div>
-<div id="y1992" class="year"></div>
-<div id="y1993" class="year"></div>
-<div id="y1994" class="year"></div>
-<div id="y1995" class="year"></div>
-<div id="y1996" class="year"></div>
-<div id="y1997" class="year"></div>
-<div id="y1998" class="year"></div>
-<div id="y1999" class="year"></div>
-<div id="y2000" class="year"></div>
-<div id="y2001" class="year"></div>
-<div id="y2002" class="year"></div>
-<div id="y2003" class="year"></div>
-<div id="y2004" class="year"></div>
-<div id="y2006" class="year"></div>
-<div id="y2007" class="year"></div>
-<div id="y2008" class="year"></div>
-<div id="y2009" class="year"></div>
-<div id="y2010" class="year"></div>
-<div id="y2011" class="year"></div>
-<div id="y2012" class="year"></div>
-<div id="y2013" class="year"></div>
-<div id="y2014" class="year"></div>
-<div id="y2015" class="year"></div>
-<div id="y2016" class="year"></div>
-</div>
-</div>
-<!--   </div> -->
+    <div class="content">
+      <div class="results" style="display:none;"></div>
+      <div id="y1958" class="year"></div>
+      <div id="y1975" class="year"></div>
+      <div id="y1978" class="year"></div>
+      <div id="y1979" class="year"></div>
+      <div id="y1980" class="year"></div>
+      <div id="y1981" class="year"></div>
+      <div id="y1982" class="year"></div>
+      <div id="y1983" class="year"></div>
+      <div id="y1984" class="year"></div>
+      <div id="y1985" class="year"></div>
+      <div id="y1986" class="year"></div>
+      <div id="y1987" class="year"></div>
+      <div id="y1988" class="year"></div>
+      <div id="y1990" class="year"></div>
+      <div id="y1991" class="year"></div>
+      <div id="y1992" class="year"></div>
+      <div id="y1993" class="year"></div>
+      <div id="y1994" class="year"></div>
+      <div id="y1995" class="year"></div>
+      <div id="y1996" class="year"></div>
+      <div id="y1997" class="year"></div>
+      <div id="y1998" class="year"></div>
+      <div id="y1999" class="year"></div>
+      <div id="y2000" class="year"></div>
+      <div id="y2001" class="year"></div>
+      <div id="y2002" class="year"></div>
+      <div id="y2003" class="year"></div>
+      <div id="y2004" class="year"></div>
+      <div id="y2006" class="year"></div>
+      <div id="y2007" class="year"></div>
+      <div id="y2008" class="year"></div>
+      <div id="y2009" class="year"></div>
+      <div id="y2010" class="year"></div>
+      <div id="y2011" class="year"></div>
+      <div id="y2012" class="year"></div>
+      <div id="y2013" class="year"></div>
+      <div id="y2014" class="year"></div>
+      <div id="y2015" class="year"></div>
+      <div id="y2016" class="year"></div>
+    </div>
+  </div>
 </body>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
