--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="Frey Hargarten, Billy Steve Clayton, Jamie Hutt - StarTribune">
 <!--   <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css"> -->
   <link rel="stylesheet" href="http://striblab.github.io/startribune_dataviz/_common_resources/styles/startribune_dataviz_styles.css" />
-  <style>  
-    body, p {
+  <style>
+    body {
       font-family:"Benton Sans",Helvetica,Arial,sans-serif;
       font-size: .85em;
       color:#444;
@@ -31,6 +31,7 @@
     #filterBox{
       display:none;
     }
+
     .filters{
       width:100%;
       z-index:10000;
@@ -50,9 +51,7 @@ padding-bottom:36px;
       margin-top:-9px;
     }
 
-
     .content{margin-top:135px;}
-
 
     #filter input[type=search]{
       width: 100% !important;
@@ -68,6 +67,7 @@ padding-bottom:36px;
       border-radius: 0;
       color: rgba(0,0,0,1);
     }
+
     .wrapper-demo{
       display:block;
     }
@@ -141,6 +141,7 @@ padding-bottom:36px;
       z-index:1000;
       background:#f0f0f0;
     }
+
     .wrapper-dropdown-1 .dropdown li a {
     color: #757575;
     padding: 5px 18px;
@@ -148,6 +149,7 @@ padding-bottom:36px;
     .wrapper-dropdown-1 .dropdown li a:hover {
     color: #fff;
     }   
+
     .wrapper-dropdown-1 .dropdown li.selected {
       color:#000;
     }
@@ -273,11 +275,10 @@ padding-bottom:36px;
       width: 100%;
       height: 100%;
     }
-
+    @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
 
       body {width:98.5%;}
       
-
       #wrapper{
         width:100%;
       }
@@ -422,7 +423,7 @@ function spitFirstItems(year){
       return "<div class='yearHide'>" + d.year + "</div><div class='title'>" + d.title + "</div><div class='description'>" + d.notes + "</div>" ;
     }
     if (d.type == "album"){
-      return "<div class='yearHide'>" + d.year + " </div><div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Certified : " + d.rank + "</div><div class='label'>Label: " + d.label + "<div class='description'>" + d.strib_copy + "</div><div class='score'>Score: " + d.strib_score + "</div><div class='author'> ~ " + d.author + "</div>" ;
+      return "<div class='yearHide'>" + d.year + "</div><div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Certified : " + d.rank + "</div><div class='label'>Label: " + d.label + "<div class='description'>" + d.strib_copy + "</div><div class='author'> ~ " + d.author + "</div><div class='score'>Score: " + d.strib_score + "</div>" ;
     }
     if (d.type == "alt"){
       return "<div class='yearHide'>" + d.year + "</div><div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='description'>" + d.notes + "</div>" ;
