--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -277,16 +277,16 @@ padding-bottom:36px;
     }
     @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
 
-      body {width:98.5%;}
+      
       
       #wrapper{
-        width:100%;
+        width:98.5%;
       }
-
+body {width:98.5%;}
 
       .filters{
         width:100%;
-        background:#fff;
+        padding:0 .5% 0 .5%;
       }
       #filter{
         margin-top:-9px;
