--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -6,7 +6,7 @@
   <title>Prince's Career by the Numbers</title>
   <meta name="description" content="Prince's Career by the Numbers">
   <meta name="author" content="Frey Hargarten, Billy Steve Clayton, Jamie Hutt - StarTribune">
-<!--   <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css"> -->
+  <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css">
   <link rel="stylesheet" href="http://striblab.github.io/startribune_dataviz/_common_resources/styles/startribune_dataviz_styles.css" />
   <style>
     body {
