--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -6,7 +6,7 @@
   <title>Prince's Career by the Numbers</title>
   <meta name="description" content="Prince's Career by the Numbers">
   <meta name="author" content="Frey Hargarten, Billy Steve Clayton, Jamie Hutt - StarTribune">
-  <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css">
+  <!-- <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css"> -->
   <link rel="stylesheet" href="http://striblab.github.io/startribune_dataviz/_common_resources/styles/startribune_dataviz_styles.css" />
   <style>
     body {
@@ -25,9 +25,7 @@
     ::-moz-selection {
       background: #e1c0e1;
     }
-    #wrapper{
 
-    }
     #filterBox{
       display:none;
     }
@@ -277,15 +275,10 @@ padding-bottom:36px;
     }
     @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
 
-      
-      
-      #wrapper{
-        width:98.5%;
-      }
-body {width:98.5%;}
+      body {width:100%;}
 
       .filters{
-        width:100%;
+        width:98.5%;
         padding:0 .5% 0 .5%;
       }
       #filter{
