--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     ul.share-buttons { list-style:none; padding:0 !important; }
     ul.share-buttons li { display:inline !important; }
     ul.share-buttons li:hover { opacity:0.8; }
-    #sharing { text-align:center; }
+    #sharing { text-align:center; margin-left:auto; margin-right:auto; padding:20px; }
 
 /*SIDEBAR*/
       #dataSidebar { float:right !important; display:inline-block !important; width:30% !important; border: 1px solid #ddd; }
@@ -90,6 +90,7 @@
 /*RESOURCES*/
       #resourcesBlock { display:none; }
       .linkage { padding:5px; }
+      #databankLink { font-weight:900; margin-right:auto; margin-left:auto; padding:20px; text-align:center; }
       
 /*FOOTER*/
       .scrollToTop { color:#87C944 !important; text-align:center; padding:15px; }
@@ -177,17 +178,17 @@
 
 <div id="resourcesBlock" class="resources">
 <h3 id="foi">Freedom of Information</h3>
-<div id="foia" class="box">
+<div id="foia">
 
 </div>
 
 <h3 id="timelines">Timelines and Time Series</h3>
-<div id="timeline" class="box">
+<div id="timeline">
 
 </div>
 
 <h3 id="carto">Cartography</h3>
-<div id="maps" class="box">
+<div id="maps">
 
 </div>
 
@@ -197,12 +198,12 @@
 </div>
 
 <h3 id="datapub">Blogs and Publications</h3>
-<div id="publications" class="box">
+<div id="publications">
 
 </div>
 
-<h3 id="source">Data Sources</h3>
-<div id="sources">
+<h3 id="sourcing">Data Sources</h3>
+<div id="source">
 
 </div>
 
@@ -212,7 +213,7 @@
 </div>
 
 <h3 id="nvd3">Visualization Generators</h3>
-<div id="vizgen" class="box">
+<div id="vizgen">
 
 </div>
 
@@ -261,6 +262,8 @@
 <div id="graphics">
 
 </div>
+
+<div id="databankLink"><a href="https://drive.google.com/a/umn.edu/folderview?id=0B01GwdexvA5PSjlSc0VlQlZkdE0&usp=sharing" target="new_">StarTribune Databank</a></div>
 </div>
 
 <!-- <div class="more"><a  href="javascript:void(0)">See more</a></div>
@@ -395,7 +398,7 @@ spitResources("timeline");
 spitResources("maps");
 spitResources("geocoding");
 spitResources("publications");
-spitResources("sources");
+spitResources("source");
 spitResources("deepweb");
 spitResources("vizgen");
 spitResources("library");
