--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -385,6 +385,9 @@
       <div id="y2016" class="year"></div>
     </div>
   </div>
+
+<div class="breaker"></div>
+<div class="source">Sources: Billboard, Nielsen SoundScan</div>
 </body>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
